--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Template File</title>
-		<!-- Reset first, order matters -->
+
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
+
+		<title>Project 4</title>
 	</head>
 	<body>
-		<!-- This is where the content goes -->
+
+		<div class="container">
+		      <div class="box box1">Box 1</div>
+		      <div class="box box2">Box 2</div>
+		      <div class="box box3">Box 3</div>
+		      <div class="box box4">Box 4</div>
+		    </div>
+
 		<script src="js/main.js"></script>
 	</body>
 </html>
